--- a/includes/footer.html
+++ b/includes/footer.html
@@ -34,9 +34,7 @@
 						navigation: true,
 
 						//Scrolling
-						css3: true,
-						/*autoScrolling:false,
-						fitToSection: false*/
+						css3: true
 					}
 				);
 			});
