--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -21,7 +21,7 @@
   .logo{
   	width: 20%;
   }
-  .hometop{
+  .hometop, .abouttop{
     background-position: right center;
     background-size: cover;
   }
@@ -81,7 +81,7 @@
   p {
     font-size: 1em;
   }
-  .hometop{
+  .hometop, .abouttop{
     background-position: right center;
     background-size: cover;
   }
@@ -113,7 +113,7 @@
   p {
     font-size: 1.125em;
   }
-  .hometop{
+  .hometop, .abouttop{
     background-position: center center;
     background-size: 100% auto;
   }
