--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,13 @@ hr {
   background: #000000;
   border: 0;
   border-radius: 0;
+  color: #ffffff;
   display: inline-block;
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 1em;
   font-weight: 300;
-  padding: 3% 5%;
+  /*padding: 3% 5%;*/
+  padding: 1em 3em;
   text-transform: uppercase;
   text-align: center; }
   .btn:link {
@@ -176,15 +178,8 @@ nav a {
   align-items: center;
   justify-content: space-between; }
   .oneFourth a.btn {
-    background: #000000;
-    border: 0;
-    border-radius: 0;
-    font-family: "Lato", Helvetica, Arial, sans-serif;
-    font-size: 1.5em;
-    font-weight: 300;
-    padding: 10% 5%;
-    text-transform: uppercase;
-    text-align: center; }
+    font-size: 1.3em;
+    padding: 1em 4em; }
     .oneFourth a.btn:link {
       color: #ffffff;
       text-decoration: none; }
