--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -72,11 +72,13 @@ hr{
   background: $quaternary;
   border: 0;
   border-radius: 0;
+  color: $tertiary;
   display: inline-block;
   font-family: $font-style-secondary;
   font-size: 1em;
   font-weight: 300;
-  padding: 3% 5%;
+  /*padding: 3% 5%;*/
+  padding: 1em 3em;
   text-transform: uppercase;
   text-align: center;
   &:link{
