--- a/includes/header.html
+++ b/includes/header.html
@@ -122,6 +122,7 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <a class="nav-item nav-link" href="#">Nail Designs</a>
+          <a class="nav-item nav-link" href="#">Discover Diamond Nails</a>
           <a class="nav-item nav-link" href="#">Discover Ita Nails</a>
           <a class="nav-item nav-link" href="#">About</a>
           <a class="nav-item nav-link" href="#">Contact</a>
