--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -29,6 +29,9 @@
     height: 30vh;
     background-position: center bottom;
   }
+  .aboutThirty{
+    height: 30vh;
+  }
   .seventy{
   	padding-left: 7%;
   	padding-right: 7%;
@@ -53,6 +56,9 @@
   .thirty{
     height: 30vh;
     background-position: center bottom;
+  }
+  .aboutThirty{
+    height: 30vh;
   }
   .seventy{
   	padding-left: 7%;
@@ -88,6 +94,9 @@
   .thirty{
     height: 100vh;
     background-position: center center;
+  }
+  .aboutThirty{
+    height: 100vh;
   }
   .seventy{
   	padding-left: 5%;
