--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ header ul li a{
 	}
 }*/
 .logo {
-  width: 10%; }
+  width: 9%; }
   .logo img {
     width: 100%; }
 
@@ -169,7 +169,8 @@ nav a {
 .threeFourth {
   height: 75vh;
   display: flex;
-  align-items: center; }
+  /*align-items: center;*/
+  padding-top: 4em; }
 
 .oneFourth {
   background: #edece8;
@@ -185,19 +186,20 @@ nav a {
       text-decoration: none; }
 
 .forty {
-  float: left;
+  /*float: left;
   width: 35%;
-  margin-right: 5%; }
-  .forty img {
-    width: 100%; }
+  margin-right: 5%;*/
+  /*img{
+    width: 100%;
+  }*/ }
 
 .sixty {
-  float: left;
+  /*float: left;
   min-height: 50px;
-  width: 60%; }
-  .sixty p {
-    /*font-size: 1.5em;*/
-    margin-top: 4%; }
+  width: 60%;
+	p{
+		margin-top: 4%;
+	}*/ }
   .sixty .logosTwo {
     justify-content: space-between;
     align-self: flex-end; }
@@ -244,16 +246,11 @@ nav a {
     text-align: justify; }
 
 .columnThree {
-  /*display: flex;
-  flex: 1;
-  justify-content: space-between;*/
-  /*div{
-  	width: 30%;
-  }*/ }
+  margin-top: 2%; }
 
 .featuredStyle {
-  display: flex;
-  margin-top: 5%; }
+  /*display: flex;*/
+  margin-top: 2%; }
 
 .featuredStyleL {
   /*float: left;
@@ -301,6 +298,9 @@ nav a {
   .contact p {
     margin-bottom: 20px; }
 
+.contactform h1 {
+  margin-top: 2em; }
+
 .abouttop {
   background-attachment: fixed;
   background-image: url("../assets/chispa-aboutCover.jpg");
@@ -319,6 +319,13 @@ nav a {
 
 .aboutMission .seventy {
   margin-top: 8.5em; }
+
+.aboutThirty {
+  background-image: url("../assets/chiSpaLounge.jpg");
+  background-position: right center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh; }
 
 /* ///////////// form ////////////// */
 form {
@@ -363,15 +370,19 @@ input[type="submit"], input[type="button"], input[type="reset"] {
   text-transform: uppercase; }
 
 textarea {
-  border: 1px solid #ffffff;
+  border: 1px solid #000000;
   box-sizing: border-box;
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 1em;
   line-height: normal;
-  margin: 40px 0 0 0;
+  margin: 25px 0 0 0;
   padding: 1%;
   text-indent: 1%;
   width: 100%; }
+
+textarea:focus {
+  border: 1px solid #bda355;
+  color: #bda355; }
 
 input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover {
   cursor: pointer;
@@ -395,11 +406,9 @@ input[type="submit"]:focus {
     border-bottom: 1px solid #000000;
     color: #000000;
     width: 100%; }
-  .secondaryForm input:focus, .secondaryForm textarea:focus {
+  .secondaryForm input:focus {
     border-bottom: 1px solid #bda355;
     color: #bda355; }
-  .secondaryForm textarea {
-    border: 1px solid #000000; }
   .secondaryForm input[type="submit"], .secondaryForm input[type="button"], .secondaryForm input[type="reset"] {
     margin-top: 5%;
     padding: 2% 9%; }
@@ -461,6 +470,9 @@ input[type="submit"]:focus {
     height: 30vh;
     background-position: center bottom; }
 
+  .aboutThirty {
+    height: 30vh; }
+
   .seventy {
     padding-left: 7%;
     padding-right: 7%; }
@@ -482,6 +494,9 @@ input[type="submit"]:focus {
   .thirty {
     height: 30vh;
     background-position: center bottom; }
+
+  .aboutThirty {
+    height: 30vh; }
 
   .seventy {
     padding-left: 7%; }
@@ -513,6 +528,9 @@ input[type="submit"]:focus {
   .thirty {
     height: 100vh;
     background-position: center center; }
+
+  .aboutThirty {
+    height: 100vh; }
 
   .seventy {
     padding-left: 5%; }
