--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -50,7 +50,7 @@ header ul li a{
 }*/
 
 .logo{
-	width: 10%;
+	width: 9%;
   img{
     width: 100%;
   }
@@ -93,7 +93,8 @@ nav a{
   height: 75vh;
   @extend .basepadding;
   display: flex;
-  align-items: center;
+  /*align-items: center;*/
+	padding-top: 4em;
 }
 .oneFourth{
   background: $secondary;
@@ -112,21 +113,20 @@ nav a{
   }
 }
 .forty{
-  float: left;
+  /*float: left;
   width: 35%;
-  margin-right: 5%;
-  img{
+  margin-right: 5%;*/
+  /*img{
     width: 100%;
-  }
+  }*/
 }
 .sixty{
-  float: left;
+  /*float: left;
   min-height: 50px;
   width: 60%;
 	p{
-		/*font-size: 1.5em;*/
 		margin-top: 4%;
-	}
+	}*/
 	.logosTwo{
 		justify-content: space-between;
 		align-self: flex-end;
@@ -178,17 +178,12 @@ nav a{
 	}
 }
 .columnThree{
-	/*display: flex;
-	flex: 1;
-	justify-content: space-between;*/
+	margin-top: 2%;
 	@extend .basepadding;
-	/*div{
-		width: 30%;
-	}*/
 }
 .featuredStyle{
-	display: flex;
-	margin-top: 5%;
+	/*display: flex;*/
+	margin-top: 2%;
 }
 .featuredStyleL{
   /*float: left;
@@ -243,6 +238,11 @@ nav a{
 		margin-bottom: 20px;
 	}
 }
+.contactform{
+	h1{
+		margin-top: 2em;
+	}
+}
 .abouttop{
   background-attachment: fixed;
   background-image: url("../assets/chispa-aboutCover.jpg");
@@ -266,6 +266,13 @@ nav a{
 	.seventy{
 		margin-top: 8.5em;
 	}
+}
+.aboutThirty{
+	background-image: url("../assets/chiSpaLounge.jpg");
+  background-position: right center;
+  background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
 }
 /* ///////////// form ////////////// */
 form{
@@ -311,15 +318,19 @@ input[type="submit"], input[type="button"], input[type="reset"] {
 	text-transform: uppercase;
 }
 textarea {
-	border: 1px solid $tertiary;
+	border: 1px solid $quaternary;
 	box-sizing: border-box;
 	font-family: $font-style-secondary;
 	font-size: 1em;
 	line-height: normal;
-	margin: 40px 0 0 0;
+	margin: 25px 0 0 0;
 	padding: 1%;
 	text-indent: 1%;
 	width:100%;
+}
+textarea:focus {
+	border: 1px solid $primary;
+	color: $primary;
 }
 input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover{cursor: pointer;background-color: $primary;}
 input[type="submit"]:visited{cursor: pointer;background-color: $primary;}
@@ -333,12 +344,9 @@ input[type="submit"]:focus{cursor: pointer;background-color: $primary;}
 		color: $quaternary;
 		width: 100%;
 	}
-	input:focus, textarea:focus {
+	input:focus{
 		border-bottom: 1px solid $primary;
 		color: $primary;
-	}
-	textarea {
-		border: 1px solid $quaternary;
 	}
 	input[type="submit"], input[type="button"], input[type="reset"] {
 		margin-top: 5%;
