--- a/includes/header.html
+++ b/includes/header.html
@@ -121,11 +121,11 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
-          <a class="nav-item nav-link" href="#">Nail Designs</a>
-          <a class="nav-item nav-link" href="#">Discover Diamond Nails</a>
-          <a class="nav-item nav-link" href="#">Discover Ita Nails</a>
-          <a class="nav-item nav-link" href="#">About</a>
-          <a class="nav-item nav-link" href="#">Contact</a>
+          <a class="nav-item nav-link" href="naildesigns">Nail Designs</a>
+          <a class="nav-item nav-link" href="discoverdiamon">Discover Diamond Nails</a>
+          <a class="nav-item nav-link" href="discoverita">Discover Ita Nails</a>
+          <a class="nav-item nav-link" href="about">About</a>
+          <a class="nav-item nav-link" href="contact">Contact</a>
         </div>
       </nav>
     </header>
