--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ hr {
   border-top: 1px solid #d5d5d5;
   margin-top: 3%; }
 
-.basepadding, .hometopContent, .threeFourth, .oneFourth, .columnThree {
+.basepadding, .hometopContent, .threeFourth, .oneFourth, .columnThree, .nailpadding {
   padding-left: 7%;
   padding-right: 7%; }
 
@@ -102,9 +102,9 @@ hr {
   .fullimg div {
     padding: 0; }
   .fullimg img {
+    object-fit: cover;
     padding: 0;
-    width: 100%;
-    object-fit: cover; }
+    width: 100%; }
 
 /* ///////////// header  ////////////// */
 .head {
@@ -471,6 +471,159 @@ input[type="submit"]:focus {
   max-height: 65vh;
   overflow: hidden; }
 
+.heightfiftyfive {
+  min-height: 55vh; }
+
+.heightfortyfive {
+  min-height: 45vh; }
+
+.minheightforty {
+  min-height: 40vh; }
+
+.nailpadding {
+  padding-top: 20px;
+  padding-bottom: 20px; }
+
+.backgroundimg {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.diamond1 {
+  background-image: url("../assets/discoverdiamond1.jpg");
+  background-position: center bottom; }
+
+.diamond2 {
+  background-image: url("../assets/discoverdiamond2.jpg");
+  background-position: center bottom; }
+
+.discoverita1 {
+  background-image: url("../assets/discoveritaA.jpg");
+  background-position: center bottom; }
+
+.discoverita2 {
+  background-image: url("../assets/discoveritaB-1.jpg");
+  background-position: center bottom; }
+
+.page-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #222;
+  overflow: hidden; }
+
+.main-container {
+  height: 100%;
+  overflow: hidden; }
+
+.inner-main-container {
+  display: block;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  overflow-x: hidden;
+  overflow-y: scroll; }
+
+.inner-main-container::-webkit-scrollbar {
+  width: 5px; }
+
+.inner-main-container::-webkit-scrollbar-track {
+  background: #555; }
+
+.inner-main-container::-webkit-scrollbar-thumb {
+  background: #EC3; }
+
+.collage-container {
+  display: block;
+  position: relative;
+  height: auto;
+  width: 100%;
+  /*max-width: 800px;
+  margin: 6% auto 100px;*/
+  overflow: hidden; }
+
+.photo-tile {
+  float: left;
+  box-sizing: border-box;
+  position: relative;
+  background-size: cover !important;
+  background-position: center !important;
+  transition: 0.25s ease; }
+
+.photo-tile::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgba(20, 20, 20, 0.4);
+  transition: 0.3s ease; }
+
+.photo-tile:hover::before {
+  opacity: 0; }
+
+/* Photo tile height classes */
+.single {
+  height: 100px; }
+
+.double {
+  height: 200px; }
+
+.triple {
+  height: 300px; }
+
+.quadruple {
+  height: 400px; }
+
+.quintuple {
+  height: 500px; }
+
+/* Photo tile width classes */
+.whole {
+  width: 100%; }
+
+.three-quarters {
+  width: 75%; }
+
+.two-thirds {
+  width: 66.6666666%; }
+
+.half {
+  width: 50%; }
+
+.third {
+  width: 33.3333333%; }
+
+.quarter {
+  width: 25%; }
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 480px) {
+  .three-quarters {
+    width: 100%; }
+
+  .two-thirds {
+    width: 100%; }
+
+  .half {
+    width: 100%; }
+
+  .third {
+    width: 100%; }
+
+  .quarter {
+    width: 100%; }
+
+  .triple {
+    height: 200px; }
+
+  .quadruple {
+    height: 200px; }
+
+  .quintuple {
+    height: 300px; } }
 /* ///////////// nail design end ////////////// */
 .policy {
   padding-top: 8.5rem;
@@ -494,10 +647,13 @@ input[type="submit"]:focus {
       margin-top: 10px; }
 
 /* ///////////// footer ////////////// */
+footer {
+  height: 100%; }
+
 .fullpagefooter, footer {
   background: #edece8;
   clear: both;
-  height: 20vh; }
+  /*height: 20vh;*/ }
   .fullpagefooter .footerSplit, footer .footerSplit {
     display: flex;
     justify-content: space-between; }
