--- a/includes/header.html
+++ b/includes/header.html
@@ -112,7 +112,7 @@
   <header>
     <nav class="navbar navbar-expand-md fixed-top">
 
-        <a class="navbar-brand logo" href="#">
+        <a class="navbar-brand logo" href="index">
           <img src="assets/luxitaLogo.png" class="d-inline-block align-top" alt="LUXITA">
         </a>
 
