--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -12,10 +12,20 @@
   h1 {
     font-size: 3.1em;
   }
+  h2 {
+    font-size: 2.5em;
+  }
+  h4 {
+    font-size: 1.575em;
+  }
   .oneFourth{
-    height: auto;
+    padding-bottom: 4%;
+    padding-top: 4%;
     h1 {
     font-size: 2.7em;
+    }
+    a.btn{
+      font-size: 1em;
     }
   }
   .logo{
@@ -24,6 +34,29 @@
   .hometop, .abouttop{
     background-position: right center;
     background-size: cover;
+  }
+  .hometopContent{
+  	background-image: none;
+    background: rgba(255,255,255,0.7);
+  	width: 100%;
+  }
+  .hometopContent .btn {
+      display: block;
+      width: 60%;
+  }
+  .hometopContent div a:first-of-type {
+    display: none;
+  }
+  .sixty{
+    .logosTwo{
+      flex-direction: column;
+     img{
+       width: 100%;
+       &:last-of-type{
+         margin-bottom: 6%;
+       }
+      }
+    }
   }
   .thirty{
     height: 30vh;
@@ -44,11 +77,17 @@
     -moz-column-gap: 0;
     column-gap: 0;
   }
+  .featuredStyleR {
+    min-height: 30vh;
+  }
   input[type="text"], input[type="email"] {
     width: 100%;
   }
   .contact {
   margin: 0 7%;
+  }
+  .secondaryForm {
+    margin-bottom: 4%;
   }
 }
 // Small devices (landscape phones, 576px and up)
