--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -75,7 +75,9 @@ nav a{
   	color: $primary;
   }
 }
-
+.navbar-toggler-icon, .navbar-toggler{
+	background: $primary;
+}
 /* ///////////// header end ////////////// */
 
 .hometop{
@@ -112,7 +114,7 @@ nav a{
 }
 
 .threeFourth{
-  height: 75vh;
+  min-height: 75vh;
   @extend .basepadding;
   display: flex;
   /*align-items: center;*/
@@ -120,7 +122,7 @@ nav a{
 }
 .oneFourth{
   background: $secondary;
-  height: 25vh;
+  min-height: 25vh;
   @extend .basepadding;
   display: flex;
   align-items: center;
