--- a/includes/header.html
+++ b/includes/header.html
@@ -110,7 +110,7 @@
 		</ul>
 	</header>-->
   <header>
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-light navbar-expand-md fixed-top">
 
         <a class="navbar-brand logo" href="index">
           <img src="assets/luxitaLogo.png" class="d-inline-block align-top" alt="LUXITA">
