minor edits for live test

--- a/includes/header.html
+++ b/includes/header.html
@@ -96,19 +96,6 @@
 </head>
 
 <body>
-	<!--<header class="head">
-		<ul>
-			<div class="logo">
-			     <li><a rel="canonical" href="#"><img src="assets/luxitaLogo.png" alt="LUXITA" /></a></li>
-			</div>
-			<div class="nav">
-			<li><a rel="canonical" href="#">Nail Designs</a></li>
-			<li><a rel="canonical" href="#">Discover Ita Nails</a></li>
-			<li><a rel="canonical" href="#">About</a></li>
-			<li><a rel="canonical" href="#">Contact</a></li>
-			</div>
-		</ul>
-	</header>-->
   <header>
     <nav class="navbar navbar-light navbar-expand-md fixed-top">
 
@@ -122,7 +109,7 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <a class="nav-item nav-link" href="naildesigns">Nail Designs</a>
-          <a class="nav-item nav-link" href="discoverdiamon">Discover Diamond Nails</a>
+          <a class="nav-item nav-link" href="discoverdiamond">Discover Diamond Nails</a>
           <a class="nav-item nav-link" href="discoverita">Discover Ita Nails</a>
           <a class="nav-item nav-link" href="about">About</a>
           <a class="nav-item nav-link" href="contact">Contact</a>
