--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,44 +11,6 @@
   width: 100%;
 }
 
-/*header ul{
-	display: block;
-	margin: 0;
-	padding: 0;
-  width: 100%;
-}
-
-header ul li{
-	float: left;
-	font-family: $font-style-primary;
-	position: relative;
-  margin: 0 2%;
-}
-
-header ul li a{
-  &:link{
-  	color: $quaternary;
-  	display: inline-block;
-  	line-height: 54px;
-  	text-decoration: none;
-  }
-  &:visited {
-  	color: $tertiary;
-  }
-  &:hover    {
-  	color: $primary;
-  }
-  &:active   {
-  	color: $primary;
-  }
-  &:focus {
-  	color: $primary;
-  }
-	.nav{
-		float: right;
-	}
-}*/
-
 .logo{
 	width: 9%;
   img{
@@ -78,7 +40,7 @@ nav a{
 /*.navbar-toggler {
     border-color: rgba(0,0,0,.1);
 }*/
-.navbar-collapse {
+.show {
 	background-color: rgba(237,236,232,.95);
 	a{
 		&:hover{
