--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,8 +1,8 @@
 			<!-- END CONTENT -->
 
 		<!-- Footer -->
-			<footer class="basepadding middle">
-				<div class="text-center">
+			<footer class="basepadding middle text-center ">
+				<!--<div class="text-center">
 					<i class="fa fa-twitter fa-lg"></i>
 					<i class="fa fa-instagram fa-lg"></i>
 				</div>
@@ -15,6 +15,20 @@
 						<p>Privacy Policy     Press     Photo Rights</p>
 						<p>© 2017 LUXITA Ltd. All Rights Reserved</p>
 					</div>
+				</div>-->
+				<div>
+					<i class="fa fa-twitter fa-lg"></i>
+					<i class="fa fa-instagram fa-lg"></i>
+					LUXITA - Bringing Fashion To Your Finger Tips
+				</div>
+				<div class="legal">
+					© 2017 LUXITA Ltd. All Rights Reserved
+					<a href="privacy-policy">Privacy Policy</a>
+					<a href="#">Press</a>
+					<a href="photo-rights">Photo Rights</a>
+				</div>
+				<div class="credit">
+					Hand Coded and designed with <span>♥</span> by <a href="http://katherinedelorme.com/" target="_blank">Katherine Delorme</a>
 				</div>
 			</footer>
 		<!--footer-->
