--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -48,6 +48,8 @@
     display: none;
   }
   .sixty{
+    margin-top: 40px;
+    margin-bottom: 20px;
     .logosTwo{
       flex-direction: column;
      img{
