--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -82,6 +82,9 @@
   .featuredStyleR {
     min-height: 30vh;
   }
+  .newsletter{
+    background-position: center center;
+  }
   input[type="text"], input[type="email"] {
     width: 100%;
   }
