--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -494,6 +494,12 @@ input[type="submit"]:focus{cursor: pointer;background-color: $primary;}
     .quadruple {height: 200px;}
     .quintuple {height: 300px;}
 }
+.seventy .page-container {
+	display: contents;
+	bottom: auto;
+	margin: 0 7%;
+	top: auto;
+}
 /* ///////////// nail design end ////////////// */
 
 .policy{
