--- a/includes/header.html
+++ b/includes/header.html
@@ -97,11 +97,11 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-light navbar-expand-md fixed-top">
+    <nav class="navbar navbar-inverse bg-inverse navbar-expand-md fixed-top">
 
-        <a class="navbar-brand logo" href="index">
+        <!--<a class="navbar-brand logo" href="index">
           <img src="assets/luxitaLogo.png" class="d-inline-block align-top" alt="LUXITA">
-        </a>
+        </a>-->
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
