--- a/includes/footer.html
+++ b/includes/footer.html
@@ -14,7 +14,7 @@
 					<a href="photo-rights">Photo Rights</a>
 				</div>
 				<div class="credit">
-					Hand Coded and designed with <span>♥</span> by <a href="http://katherinedelorme.com/" target="_blank">Katherine Delorme</a>
+					Hand coded and designed with <span>♥</span> by <a href="http://katherinedelorme.com/" target="_blank">Katherine Delorme</a>
 				</div>
 			</footer>
 		<!--footer-->
