--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -118,6 +118,9 @@
   }
   .heightFull{
     height: auto;
+  /* height: 100%;
+    display: block;
+    background: red;*/
     /*margin: 5px 0;*/
   }
   .nailDesignCollage{
